--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-		<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
-		<title>Eat-Da-Burger!</title>
+		<link rel="stylesheet" href="/assets/css/taco_style.css" type="text/css" />
+		<title>Eat-Da-Taco!</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="/assets/js/burger.js"></script>
+		<script src="/assets/js/tacos.js"></script>
 	</head>
 	<body>
 		{{{ body }}}
