--- a/views/partials/taco/taco-block.handlebars
+++ b/views/partials/taco/taco-block.handlebars
@@ -1,4 +1,4 @@
 <tr class="table-row">
-    <td class="table-first-col">{{id}}. {{burger_name}}</td>
+    <td class="table-first-col">{{taco_name}}</td>
     <td><button class="change-devour" data-id="{{id}}">Devour it!</button></td> 
 </tr>
